clusters/k4/kubernetes/components/namespace/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: namespace-network-policy
spec:
  description: "Allow pod inside this namespace to talk to each others, deny external (outside of namespace) trafic"
  endpointSelector:
    matchLabels:
      {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            {}
  egress:
    - toEndpoints:
        - matchLabels:
            {}
